[package]
name = "twist"
version = "0.1.0"
authors = ["tkmpypy <tkmpypy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
clap = "3.0.0-beta.1"
yaml-rust = "0.4.4"
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
tokio = { version = "0.2", features = ["full"] }
